--- a/mySite/index.html
+++ b/mySite/index.html
@@ -5,45 +5,71 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>My-Site</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
     <script src='main.js'></script>
 </head>
-<body>
-    <h1>Hola Mundo</h1>
+<body style="background-color:rgba(192, 39, 243, 0.256);">
+    <div class="my div">
+    <h1 style="background-color:#fc7fe351; font-style: oblique;color:azure;">Hola Mundo</h1>
     <h2>Etiqueta 2</h2>
     <h3>Etiqueta 3</h3>
     <h4>Etiqueta 4</h4>
     <h5>Etiqueta 5</h5>
-    <h6>Etiqueta 6</h6>
-    <p>Mucho gusto</p>
-    <p>Saludos desde casa</p>
-    <i>soy italica</i>
-    <p>
-        hasta aca soy texto normal
-        <b>soy negrita</b>
+    <h6 style="background-color:#abfc7f51; font-style: oblique;color:azure;">Etiqueta 6</h6>
+    <h1 style="background-color:#fc7fe351;font-style: oblique;color:azure;" >Hola Mundo</h1>
+    <h2>Etiqueta 2</h2>
+    <p style="color: black;">Mucho gusto</p>
+    <p style="color: black;">Saludos desde casa</p>
+    <i style="color: black;">Soy italica</i>
+    <h2>Etiqueta 2</h2>
+    <p style="color:rgba(20, 146, 248, 0.61)"> Hasta aca soy texto normal
+    <b style="color: black;">soy negrita</b>
     </p>
+    </div>
+    <br><br><br>
+    <p
+    <a title="texto">HTML TAG</a>
+    </p>
+    <h1>Práctica</h1>
 
 </body>
     <dl>
+        <div class="my div">
 
-        <dt>Mora: </dt>
-        <dd>Una de las principales características de la mora es que aporta una buena cantidad de fibra. Asimismo, la mora contiene vitamina C, carotenos y vitamina E, lo que las convierte en una fruta con poderosas propiedades antioxidantes.</dd>
+        <dt style="color: black;">Mora: </dt>
+        <dd style="color: rgb(230, 27, 213);">Una de las principales características de la mora es que aporta una buena cantidad de fibra. Asimismo, la mora contiene vitamina C, carotenos y vitamina E, lo que las convierte en una fruta con poderosas propiedades antioxidantes.</dd>
         
-        <dt>Fresa: </dt>
-        <dd>La fresa es una fruta de forma cónica o casi redonda, de tamaño variable según la especie (de 15 a 22 mm de diámetro), coronada por sépalos verdes, de color rojo y con un sabor que varía de ácido a muy dulce. Lo que más caracteriza a esta fruta es su intenso aroma.</dd>
+        <dt style="color: black;">Fresa: </dt>
+        <dd style="color: rgb(230, 27, 213);">La fresa es una fruta de forma cónica o casi redonda, de tamaño variable según la especie (de 15 a 22 mm de diámetro), coronada por sépalos verdes, de color rojo y con un sabor que varía de ácido a muy dulce. Lo que más caracteriza a esta fruta es su intenso aroma.</dd>
 
-        <dt>Durazno: </dt>
-        <dd>El melocotón o durazno es un fruto del melocotonero (Prunus pérsica), árbol de la familia de las Rosáceas. El nombre del árbol procede del latín malus cotonus que quiere decir manzana algodonosa, referente a su piel tan característica.</dd>
-    
+        <dt style="color: black;">Durazno: </dt>
+        <dd style="color: rgb(230, 27, 213);">El melocotón o durazno es un fruto del melocotonero (Prunus pérsica), árbol de la familia de las Rosáceas. El nombre del árbol procede del latín malus cotonus que quiere decir manzana algodonosa, referente a su piel tan característica.</dd>
+    </div>
     </dl>
 
-    <p>Hoy es un <em>día</em> muy soleado.</p>
+<div class="my div">
+    <p>Hoy es un <em style="color: black;">día</em> muy soleado.</p>
 
-    <p>Esto es una <ins> prueba </ins> solo es parte de la práctica.</p>
+    <p>Esto es una <ins style="color: black;"> prueba </ins> solo es parte de la práctica.</p>
 
     <p> “El consumo cultural en América Latina alcanza su grado máximo en relación con el flujo de discursos políticos y mercantiles, y no, como en Europa, articulado a partir de los Estados nación”
-        <cite>(Jorrinsky, 2015, p. 8).</cite> 
+        <cite style="color: black;">(Jorrinsky, 2015, p. 8).</cite> 
     </p>
+</div>
+</body>
+
+<p></p>
+<h2>Ejercicios</h2>
+
+<h5>Selector de ID:</h5>
+<h3><p id="ci">SELECTORES CSS</p></h3>
+
+<h5>Selector de atributo:</h5>
+<ul>
+   <li><a href="https://itsqmet.sharepoint.com">sharepoint.com</a></li>
+   <li><a href="https://www.youtube.com"target="_blank">youtube.com</a></li>
+   <li><a href="https://es.wikipedia.org/wiki/Wikipedia:Portada">wikipedia.com</a></li>
+</ul>
 
 </body>
 </html>
